# steam-workshop-sync

./: .dockerignore  .env  .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  Makefile  QUICKSTART.md  README.md  alembic.ini  database.py  docker-compose.yml  main.py  pyproject.toml  test_download.py  test_single_item.py
.github/workflows/: docker-test.yml  release-ghcr.yml  release.yml  security-scan.yml
alembic/: env.py
alembic/versions/: 4c2e9062c94b_.py  725eac1c59a7_.py  cb51acf259c6_.py  dbc763033006_.py  e7246c856afa_initial_migration_create_workshop_items_.py  f69e89ce9b69_.py
models/: workshop.py
parsers/: workshop.py
scripts/: init-env.sh  test-docker.sh
spiders/: workshop.py
tests/: __init__.py  test_formater.py
utils/: formater.py  log.py  retry.py
